# remarkable-mcp

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  README.md  cloud_run_entrypoint.py  pyproject.toml  server.json  server.py  test_server.py
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  conformance.yml  publish.yml
docs/: capabilities.md  development.md  future-plans.md  google-vision-setup.md  resources.md  ssh-setup.md  tools.md
docs/assets/: README.md
remarkable_mcp/: __init__.py  api.py  cli.py  extract.py  prompts.py  resources.py  responses.py  sampling.py  server.py  ssh.py  sync.py  tools.py
website/: index.html
